fixed playground width overflow

--- a/html/playground/mix-blend/change.css
+++ b/html/playground/mix-blend/change.css
@@ -5,7 +5,7 @@ html {
 }
 
 section {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   background: #fff;
 }
@@ -18,7 +18,7 @@ section:nth-child(odd) {
   -webkit-user-select: none;
   user-select: none;
   position: fixed;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   display: flex;
   justify-content: center;
