--- a/styles/remake-style.css
+++ b/styles/remake-style.css
@@ -244,4 +244,10 @@ body::-webkit-scrollbar {
   .case__description {
     font-size: 16px;
   }
+
+  .self-promo {
+    font-size: 14px;
+    line-height: 14px;
+    margin: 8px;
+  }
 }
